--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,10 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
