--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,8 @@
     "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.15",
     "ts-loader": "^9.5.1",
