--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
+    "normalizr": "^3.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.27.0",
     "socket.io-client": "^4.8.1"
   },
