--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
