--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,7 +16,9 @@
     "jsx": "react-jsx",
     "paths": {
       "@shared/*": ["../../shared/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "../index.d.ts"]
   },
-  "include": ["src", "index.d.ts", "../shared/**/*"]
+  "include": ["src", "index.d.ts", "../shared/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
