--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "normalizr": "^3.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
